# itmo-fp-lab-3

./: dune-project  lab3.opam  readme.md
lib/: dune  sequtils.ml  sequtils.mli
lib/interp/: interp.ml  interp.mli
lib/sequtils/: dune  sequtils.mli
lib/solution/: datagen.ml  dune  solution.ml
test/: dune  runner.ml  test.in  test.out  utils.ml
